fix minor issues.